# originality

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
cuda_code/: lcs.cu
originality/: lcs.py
src/originality/: lcs.py
