[build-system]
requires = ["setuptools>=61.0", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "originality"
version = "0.0.1"
authors = [
  { name="Mihkel Lepson", email="mihkel.lepson@gmail.com" },
]
description = "A package for assessing text's originality"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MihkelLepson/originality"